GetIpAddrTable function failed on Pure Ipv6 environment

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 8, 9
    • Component/s: core-libs
    • None
    • b22
    • generic
    • generic

      This only happens on Pure Ipv6 environment. Reproduce with 8, 8u20 and 9. Tested on a Windows 7 SP1 32 bit VM, which has uninstalled IPv4 by "netsh interface ipv4 uninstall".

      It immediately failed when invoking:
      NetworkInterface.getNetworkInterfaces();

      This is the error message:
      Exception in thread "main" java.lang.Error: IP Helper Library GetIpAddrTable function failed
              at java.net.NetworkInterface.getAll(Native Method)
              at java.net.NetworkInterface.getNetworkInterfaces(NetworkInterface.java:343)
              at PureIpv6.main(PureIpv6.java:9)

      We haven't started to cover this configuration, so set it to low priority as suggested. Actually, all SQE tests failed and regressions test can't be executed, because of it.



            Assignee:
            Vyom Tewari
            Reporter:
            Xiaofeng Yang
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: