8046500: GetIpAddrTable function failed on Pure Ipv6 environment

Reviewed-by: chegar